fix align left feedback block

--- a/css/feedback.css
+++ b/css/feedback.css
@@ -37,7 +37,6 @@
 .feedback-section {
     position: relative;
     width: 100%;
-    max-width: 1200px;
     margin: 0 auto;
     padding: 1rem 0;
 	min-height: 70vh;
